[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15.0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "uuid", "tls-native-tls" ] }
uuid = { version = "1.7.0", features = ["serde"] }
async-recursion = "1.0.5"